validator/devnet/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: validator
  template:
    spec:
      containers:
      - name: validator
      nodeSelector:
        validator: "true"
    metadata:
      labels:
        app: validator
    spec:
      containers:
      - image: solanalabs/solana:v1.10.26
        name: watchtower
        command: ["solana-watchtower"]
        volumeMounts:
        - name: ca-certificates
          mountPath: /etc/ssl/certs/ca-certificates.crt
          subPath: ca-certificates.crt
      - image: solanalabs/solana:v1.10.26
        resources:
          limits:
            memory: "126Gi"
          requests:
            memory: "16Gi"
        imagePullPolicy: IfNotPresent
        name: validator
        command: ["/bin/sh", "-c"]
        args: ["/root/startup.sh"]
        volumeMounts:
        - name: ca-certificates
          mountPath: /etc/ssl/certs/ca-certificates.crt
          subPath: ca-certificates.crt
        - name: validator-keypairs
          mountPath: /root/validator-keypair.json
          subPath: validator-keypair.json
        - name: geyser-plugin-config
          mountPath: /root/geyser-config.json
          subPath: geyser-config.json
        - name: startup
          mountPath: /root/startup.sh
          subPath: startup.sh
        - name: validator-keypairs
          mountPath: /root/vote-account-keypair.json
          subPath: vote-account-keypair.json
        - name: ledger-storage
          mountPath: /ledger
        - name: geyser-plugin
          mountPath: /geyser
        - name: accounts-storage
          mountPath: /root/accounts
      volumes:
        - name: startup
          configMap:
            name: startup-script
            defaultMode: 0755
        - name: ca-certificates
          configMap:
            name: ca-certificates
        - name: validator-keypairs
          configMap:
            name: validator-keypairs
        - name: geyser-plugin-config
          configMap:
            name: geyser-plugin-config
        - name: ledger-storage
          persistentVolumeClaim:
            claimName: validator-data-pvc
        - name: geyser-plugin
          persistentVolumeClaim:
            claimName: geyser-plugin-data-pvc
        - name: accounts-storage
          emptyDir:
            medium: Memory
