validator/devnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validator
  namespace: devnet-solana
spec:
  ports:
  - port: 10899
    protocol: TCP
    targetPort: 10899
  selector:
    app: validator
