validator/devnet/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: validator-rpc
spec:
  ports:
  - port: 10899
    protocol: TCP
    targetPort: 10899
  selector:
    app: validator
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: validator-ws
spec:
  ports:
  - port: 10900
    protocol: TCP
    targetPort: 10900
  selector:
    app: validator
  sessionAffinity: None
  type: ClusterIP
